--- a/app_orcamento/templates/orcamento/home.html
+++ b/app_orcamento/templates/orcamento/home.html
@@ -8,15 +8,16 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">   
-    
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <title>Projeto Orçamento!</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: rgb(36, 55, 94) !important;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="https://github.com/iuriAvil4" target="_blank" style="font-size: 35px; color:#fff">Iuri Avila Guerra</a>
+            <a class="navbar-brand" href="https://github.com/iuriAvil4" target="_blank"
+                style="font-size: 35px; color:#fff">Iuri Avila Guerra</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -30,11 +31,11 @@
                     <div class="card-body">
                         <h1>Faça seu orçamento.</h1>
                         {% if messages %}
-                            <ul class="messages">  
-                                {% for message in messages %}
-                                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                        <ul class="messages">
+                            {% for message in messages %}
+                            <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
                                 {% endfor %}
-                            </ul>
+                        </ul>
                         {% endif %}
                         <form method="post" action="{% url 'home' %}">
                             {% csrf_token %}
@@ -60,4 +61,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
 </body>
+
 </html>
